# python-study

./: README.md
project001/: README.md  main.py  population.ipynb
project002/: README.md  pyproject.toml
project002/src/: __init__.py  db.sqlite3
project002/src/polls/migrations/: 0001_initial.py
project002/src/tutorial/: settings.py  urls.py
