[project]
name = "project002"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "takashiski", email = "takashiskibb@gmail.com" }
]
dependencies = [
    "django>=5.0.6",
    "psycopg2>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/project002"]
